# segment_embryo

./: .gitignore  cell_labels_annotation.csv  environment.yml  image_io.py  main.py  pyproject.toml  run_embryo_cup_mask.py  run_embryo_roi.py  run_embryo_roi_auto.py  run_epi_ve_classifier.py  run_inspect_cell_labels.py  run_micro_sam_nuclei.py  run_micro_sam_resegment.py  run_plane_split.py  run_split_fused_cell.py  run_ve_epi_manual.py  run_view_radial_alignment.py  run_view_segment.py
notes/: EPI_VE_classifier.md  SAM_napari_notes.md  epi_ve_workflow.md  micro_sam_nuclei_workflow.md  plane_split_napari_workflow.md  processing_steps.md  progress.md  segmentation_plan.md
scripts/: plot_cell_union_mask.py  plot_epi_ve_features.py  precompute_embeddings.bat  run_embryo_cup_mask.bat  run_epi_ve_classifier.bat  run_inspect_cell_labels.bat  run_micro_sam_3d.bat  run_micro_sam_nuclei.bat  run_micro_sam_nuclei_bottom_third.bat  run_micro_sam_resegment.bat  run_napari.bat  run_plane_split.bat  run_split_fused_cell.bat  run_ve_epi_manual.bat  run_view_radial_alignment.bat  run_view_segment.bat  test_align_labels.py  test_cell_features.py  test_cell_split.py  test_label_focus.py  test_micro_sam_nuclei.py  test_plane_split.py  test_ve_epi_manual.py
segmentation/: __init__.py  cell_features.py  cell_split.py  embryo_roi.py  embryo_roi_auto.py  label_focus.py  micro_sam_nuclei.py  nuclei_z_range.py  plane_split.py  ve_epi_manual.py
